Bug 1255371 - Invalid RTCP SR sent by Firefox when h264 is used; r=jesup

Setting the capture_time_ms to -1 causes RTCPSender::SetLastRtpTime to ignore
it and use the current clock time. The default value of 0 will be used in the
the calculation in RTCPSender::BuildSR and cause mismatched timestamps.

MozReview-Commit-ID: IK8lLK8Rmla