media/webrtc/signaling/src/media-conduit/WebrtcGmpVideoCodec.cpp
@@ -646,13 +646,14 @@ WebrtcGmpVideoEncoder::Encoded(GMPVideoEncodedFrame* aEncodedFrame,
       webrtc::EncodedImage unit(aEncodedFrame->Buffer(), size, size);
       unit._frameType = ft;
       unit._timeStamp = timestamp;
+      // Ensure we ignore this when calculating RTCP timestamps
+      unit.capture_time_ms_ = -1;
       unit._completeFrame = true;
 
       // TODO: Currently the OpenH264 codec does not preserve any codec
       //       specific info passed into it and just returns default values.
-      //       Even if we were to add packetization mode to the codec specific info
-      //       the value passed in would not be returned to us. If this changes in
-      //       the future, it would be nice to get rid of mCodecSpecificInfo.
+      //       If this changes in the future, it would be nice to get rid of
+      //       mCodecSpecificInfo.
       mCallback->Encoded(unit, &mCodecSpecificInfo, &fragmentation);
     }
   }
